; ModuleID = '/home/carl/AnghaBench/vlc/src/test/extr_md5.c_test_config_StringEscape.c'
source_filename = "/home/carl/AnghaBench/vlc/src/test/extr_md5.c_test_config_StringEscape.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i64 }
%struct.md5_s = type { i32 }

@md5_samples = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [25 x i8] c"Output: %s\0AExpected: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_config_StringEscape to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_config_StringEscape() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.md5_s, align 4
  %3 = alloca i8*, align 8
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %52, %0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @md5_samples, align 8
  %6 = load i32, i32* %1, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %55

12:                                               ; preds = %4
  %13 = call i32 @InitMD5(%struct.md5_s* %2)
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @md5_samples, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @md5_samples, align 8
  %21 = load i32, i32* %1, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @strlen(i64 %25)
  %27 = call i32 @AddMD5(%struct.md5_s* %2, i64 %19, i32 %26)
  %28 = call i32 @EndMD5(%struct.md5_s* %2)
  %29 = call i8* @psz_md5_hash(%struct.md5_s* %2)
  store i8* %29, i8** %3, align 8
  %30 = load i8*, i8** %3, align 8
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @md5_samples, align 8
  %32 = load i32, i32* %1, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i8*, i8** %35, align 8
  %37 = call i64 @strcmp(i8* %30, i8* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %49

39:                                               ; preds = %12
  %40 = load i8*, i8** %3, align 8
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** @md5_samples, align 8
  %42 = load i32, i32* %1, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i64 %43
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  %46 = load i8*, i8** %45, align 8
  %47 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %40, i8* %46)
  %48 = call i32 (...) @abort() #3
  unreachable

49:                                               ; preds = %12
  %50 = load i8*, i8** %3, align 8
  %51 = call i32 @free(i8* %50)
  br label %52

52:                                               ; preds = %49
  %53 = load i32, i32* %1, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %1, align 4
  br label %4

55:                                               ; preds = %4
  ret void
}

declare dso_local i32 @InitMD5(%struct.md5_s*) #1

declare dso_local i32 @AddMD5(%struct.md5_s*, i64, i32) #1

declare dso_local i32 @strlen(i64) #1

declare dso_local i32 @EndMD5(%struct.md5_s*) #1

declare dso_local i8* @psz_md5_hash(%struct.md5_s*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @printf(i8*, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
